# test_task

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: config.py  container.py
myproject/cdr/: models.py  serializers.py  test_views.py  tests.py  urls.py  views.py
myproject/cdr/migrations/: 0001_initial.py
myproject/myproject/: settings.py  urls.py
services/: exchange_rate.py
