[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["airguy <airguy-one@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
requests = "^2.32.3"
loguru = "^0.7.2"
pydantic-settings = "^2.3.3"
aioredis = "^2.0.1"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
